projects/compiler/test/typechecker/match/error_destructuring_constant_variant.out
Error at %TEST_DIR%/typechecker/match/error_destructuring_constant_variant.abra:5:13
This variant is a constant enum variant, which cannot be destructured
  |    Color.Red(r) => 1,
                 ^
